syntax = "proto2";
package common;

enum MsgID{
	// common.proto
	heart_beat_req 	= 1;
	heart_beat_resp = 2;
	
	// gateway.proto
	login_gate_req =  1000;
	login_gate_resp = 1001;
}

message msg_head{

}

message inner_msg_head{

}

// 心跳请求协议
message heart_beat_req_t{
}

// 心跳返回协议
message heart_beat_resp_t{
}

